--- a/Styles/styleSingleMov.css
+++ b/Styles/styleSingleMov.css
@@ -1,14 +1,9 @@
 :root{
     --fontLumanosimo: 'Lumanosimo', cursive;
-    --fontLilita: 'Lilita One', cursive;
     --fontRoboto: 'Roboto Condensed', sans-serif;
     --fontVT323: 'VT323', monospace;
-
-    --paleYellow:#FFFFCC;
     --fucsia:#FF3366;
     --darkPink:#CC3366	;
-    --paleBlue:#99FFFF;
-    --beish:#F9EBEA;
     --lightGray:#D5D8DC;
     --almostWhite:#FBFCFC ;
     --purple:#4A235A;
@@ -20,12 +15,13 @@ body > * , body{
     padding: 0;
     box-sizing: border-box;
     background-color: var(--almostWhite);
-    /* overflow: hidden; */
+    position: relative;
+    overflow-x: hidden;
+    padding-bottom: 2rem;
 }
 #logo{
-    width: 20vmax;
+    width: 15vmax;
     height: fit-content;
-    /* animation: rebote 0.5s 3; */
 }
 header{
        overflow: hidden; 
@@ -35,9 +31,9 @@ header{
     align-items: center;
     justify-content: space-between;
     flex-direction: row;
-    background-image: linear-gradient(#F9EBEA,#D5D8DC);
+    background-color: var(--prettypaleBlue);
     width: 100vw;
-    height: 15vmax;
+    height: 10vmax;
 
 }
 .rightHeader{
@@ -47,36 +43,14 @@ header{
     flex-direction: row;
 }
 .navBarLinks{
-    /* display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    list-style-type: none;
-    gap:1rem;
-    font-size: clamp(16px, 3vw, 24px); */
-    /* font-size: 0.6rem; */
     display: none;
 }
 .navBarLinks a{
-    /* text-decoration: none;
-    font-family: var(--fontLumanosimo);
-    color: var(--blue);
-    text-shadow: 2px 2px 5px #E74C3C; */
     display: none;
-
 }
 
 .leftHeader .boton{
-    /* background-color: var(--midlered);
-    border: 3px solid #E74C3C;
-    border-radius: 2rem;
-    font-family: var(--fontLumanosimo);
-    color: var(--paleRed);
-    height: 1.5rem;
-    width: 12vmax;
-    font-size: 0.5rem; */
     display: none;
-
 }
 
 /* tres lineas */
@@ -88,16 +62,17 @@ header{
     gap:0.4rem;
     margin-right: 5vmax;
     background-color: var(--purple);
-    padding: 0.6rem;
-    border-radius: 1.2rem;
-    width: 5rem;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    width: 3rem;
     transition: all 0.5s ease-in-out;
 }
 .options .line{
-    width: 4rem;
-    height: 0.8rem;
-    background-image: linear-gradient(#F9EBEA,#D5D8DC);
+    width: 3rem;
+    height: 0.5rem;
+    background-color: var(--prettypaleBlue);
 }
+
 .video{
     display: flex;
     justify-content: center;
@@ -107,11 +82,12 @@ header{
 .video h1{
     font-family: var(--fontLumanosimo);
     color: var(--purple);
-    font-size: clamp(28px, 3vw, 44px); 
+    font-size: clamp(26px, 3vw, 42px); 
+    margin-inline:1rem;
 }
 .video iframe{
     width:80vw; 
-    height:15rem;
+    height:35vh;
 }
 .info{
     display: flex;
@@ -145,9 +121,11 @@ header{
     align-items: center;
     flex-direction: column;
     background-color: var(--lightGray);
-    padding: 0.5rem;
+    /* padding: 0.5rem; */
     border-radius: 0.5rem;
-    transition: all 0.5s ease;
+    transition: all 0.3s ease-in-out;
+    width: 5rem;
+    height: 5rem;
 }
 .info .items .group p{
     /* width: 2.5rem; */
@@ -156,13 +134,18 @@ header{
 .info .items .group a{
     color: #CC3366;
     text-decoration: none;
-    transition: all 0.5s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    transition: all 0.8s ease-in-out;
+    width: 100%;
+    height: 100%;
+    border-radius: 0.5rem;
 }
 .info .items :nth-child(3):hover , .info .items .group a:hover{
     background-color: #4A235A;
     color: var(--almostWhite);
-    text-decoration: none;
-
 }
 .direcciones{
     margin-left: 4rem;
@@ -176,6 +159,7 @@ header{
     color: #515151;
 }
 
+
 footer{
     font-family: var(--fontVT323);
     margin-top: 5rem;
@@ -184,6 +168,10 @@ footer{
     justify-content: center;
     align-items: center;
     height: 4rem;
+    position: absolute;
+    top:100%;
+    width: 100vw;
+    padding: 1rem;
 }
 footer p a{
     text-decoration: none;
@@ -195,12 +183,12 @@ footer p{
 }
 @media (width>980px) {
     #logo{
-        width: 6rem;
+        width: 5vmax;
+        margin-left: 2vmax;
     }
     .navBar{
-        height: 5rem;
+        height: 3.5vmax;
     }
-    /* tres lineas */
     .rightHeader{
         display: flex;
         align-items: center;
@@ -215,8 +203,8 @@ footer p{
         flex-direction: row;
         list-style-type: none;
         gap:4rem;
-        font-size: clamp(16px, 3vw, 24px);
-
+        font-size: clamp(0.5vmax, 3vw, 1.5vmax);
+        margin-left: 3.5vmax;
     }
     .navBarLinks a{
         text-decoration: none;
@@ -225,14 +213,11 @@ footer p{
         text-shadow: 1px 0px 2px #ffffff;
         display: block;
         transition: all 0.3s ease-in-out ;
-    
     }
     .leftHeader .navBoton a{
         text-decoration: none;
         color: var(--almostWhite);
-        
     }
-    
     .leftHeader .boton{
         display: block;
         background-color: var(--darkPink);
@@ -240,10 +225,10 @@ footer p{
         border-radius: 1rem;
         font-family: var(--fontLumanosimo);
         color: var(--paleRed);
-        height: 2.5rem;
-        width: 10rem;
-        font-size: 1rem;
-        margin-right: 4rem;
+        height: 2.5vmax;
+        width: 10vmax;
+        font-size: 1vmax;
+        margin-right: 4vmax;
         cursor: pointer;
         transition:all 0.5s ease-in-out ;
     }
@@ -255,6 +240,7 @@ footer p{
     .options .line{
         display: none;
     }
+
     .leftHeader .boton:hover{
         filter: brightness(1.2);
     }
