--- a/Styles/styleMenu.css
+++ b/Styles/styleMenu.css
@@ -3,16 +3,11 @@
     --fontLilita: 'Lilita One', cursive;
     --fontRoboto: 'Roboto Condensed', sans-serif;
     --fontVT323: 'VT323', monospace;
-
-    --paleYellow:#FFFFCC;
     --fucsia:#FF3366;
     --darkPink:#CC3366	;
-    --paleBlue:#99FFFF;
     --beish:#F9EBEA;
-    --lightGray:#D5D8DC;
     --almostWhite:#FBFCFC ;
     --purple:#4A235A;
-    --prettypaleBlue:#EAF2F8;
     --gray:#515151;
 }
 body > * , body{
@@ -20,14 +15,15 @@ body > * , body{
     padding: 0;
     box-sizing: border-box;
     background-color: var(--almostWhite);
-    /* overflow: hidden; */
+    overflow-x: hidden;
+    position: relative;
 }
 .content{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap:5rem;
+    gap:4rem;
 }
 .content h1{
     margin-top: 0;
@@ -37,9 +33,10 @@ body > * , body{
     width: 100vw;
     text-align: center;
     background-color: var(--beish);
-    height: 8rem;
+    padding: 1.5rem;
 }
 .content ul a{
+    padding: 0.4rem;
     text-decoration: none;
     color: var(--darkPink);
     text-shadow: 1px 1px 2px var(--gray);
@@ -48,7 +45,7 @@ body > * , body{
 .content ul a:hover{
     text-decoration: none;
     color: var(--fucsia);
-    text-shadow: 1px 1px 2px var(--gray);
+    text-shadow: 1px 1px 3px var(--gray);
 }
 .content ul a li{
     list-style: none;
@@ -56,7 +53,7 @@ body > * , body{
     font-size: clamp(48px, 3vw, 64px);
 }
 .content button{
-    width: 15rem;
+    width: 12rem;
     background-color: var(--purple);
     font-family: var(--fontRoboto);
     color:var(--almostWhite);
@@ -74,8 +71,11 @@ body > * , body{
 
 
 footer{
+    position: absolute;
+    top:100%;
+    width: 100vw;
     font-family: var(--fontVT323);
-    margin-top: 5rem;
+    margin-top: 8rem;
     background-color: #006699;
     display: flex;
     justify-content: center;
