--- a/Styles/styleMov.css
+++ b/Styles/styleMov.css
@@ -84,7 +84,8 @@ main .content{
     grid-auto-rows: 35rem;
     width: 85vw;
     grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr)) ;
-    padding: 2rem;
+    padding: 1.6rem;
+    margin-top: 5rem;
 }
 main .content .card{
     display: flex;
